--- a/.github/workflows/RU4ME.yml
+++ b/.github/workflows/RU4ME.yml
@@ -30,6 +30,6 @@ jobs:
 
     - name: Compile Java
       run: |
-        cd main/HolidayTravelVehicles 
-        javac -d . main.java
+        cd recessioning/HolidayTravelVehicles 
+        javac -d . *.java
       # Compile java file from directory
