--- a/.github/workflows/RU4ME.yml
+++ b/.github/workflows/RU4ME.yml
@@ -30,6 +30,6 @@ jobs:
 
     - name: Compile Java
       run: |
-        cd recessioning/HolidayTravelVehicles 
+        cd HolidayTravelVehicles 
         javac -d . *.java
       # Compile java file from directory
